# app/controllers/chat_rooms_controller.rb
@@ -21,27 +21,27 @@ class ChatRoomsController < ApplicationController
       @chat_rooms = @chat_rooms.map do |room|
         opponent_id = room.user1_id == user_id ? room.user2_id : room.user1_id
         opponent = User.find(opponent_id)
+        last_message = room.messages.last
+        unread_messages_count = room.messages.where(read: false, receiver_id: user_id).count
         room.as_json.merge({
           opponent_id: opponent_id, 
           opponent_first_name: opponent.first_name, 
           opponent_second_name: opponent.second_name, 
-          opponent_picture: opponent.profile
+          opponent_picture: opponent.profile,
+          last_message: last_message,
+          unread_messages_count: unread_messages_count
         })
       end
 
       render json: @chat_rooms
     end
 
+    
+
     # GET /chat_rooms_with_messages/:id
     def show_with_messages
       set_chat_room
-      opponent_id = @chat_room.user1_id == params[:user_id].to_i ? @chat_room.user2_id : @chat_room.user1_id
-      opponent = User.find(opponent_id)
       @chat_room_with_messages = @chat_room.as_json.merge({
-        opponent_id: opponent_id, 
-        opponent_first_name: opponent.first_name, 
-        opponent_second_name: opponent.second_name, 
-        opponent_picture: opponent.profile,
         messages: @chat_room.messages
       })
       
